	* Added: Language support for German, French, Italian, Spanish and Russian
	* Added: Filter 'sb_register_sidebar_defaults' to allow easy override of default sidebar markup
	* Added: Post content pagination to loop.php and single.php
	* Fixed: Author template now properly loops through all of an author's posts
	* Fixed: Default settings for post thumbnails in theme options
	* Changed: Updated Upload option types to use WP3.5 media manager
	* Removed: Eliminated AJAXUpload scripts and all references
	* Removed: Timthumb.php and dependence on Timthumb entirely

2012.10.13 - version 2.6
	* Added: hook "sb_author_before_posts" on author.php after the author's meta information, before their posts are inserted
	* Added: shortcode [sitemap] to leverage the sitemap/archive functionality anywhere
	* Added: shortcode [expires] for hiding content after specific date ([expires date="Aug 18, 2012" expired_message="You missed out..."]blah[/expires])
	* Added: shortcode [show_after] for revealing content after specific date ([show_after date="Aug 18, 2012" teaser="Coming soon..."]blah[/show_after])
	* Added: /includes/functions/conditionals.php (migrated functions from the increasingly ambiguous /includes/functions/custom.php)
	* Added: /includes/functions/images.php (migrated functions from the increasingly ambiguous /includes/functions/custom.php)
	* Added: /includes/functions/menus.php (migrated functions from the increasingly ambiguous /includes/functions/custom.php)
	* Fixed: annoying bug introduced in 2.5.4 that prevented sidebar settings from being stored on first save.
	* Fixed: bug that prevented WordPress SEO (by Yoast) from overwriting page titles
	* Fixed: bug that would cause the RSS nav menu extra link to use href="true" instead of href="/your/feed/url/"
	* Changed: Options API: Refactored most of the code and added better inline documentation (see /includes/functions/admin_settings.php)